[tool.poetry]
name = "golfdb"
version = "0.1.0"
description = ""
authors = ["Rok Bohinc <rok.bohinc86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.1"
pandas = "^2.2.1"
numpy = "^1.26.4"
c2 = "^0.1.7"
torchvision = "^0.17.1"
opencv-python = "^4.9.0.80"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
